[package]
name = "bevy-wasm-tasks"
# Major and minor version here should match bevy's. Patch version can vary.
version = "0.13.0"
edition = "2021"
license = "CC0-1.0"
description = "Simple integration of WASM tasks into a Bevy app for background processing."
homepage = "https://crates.io/crates/bevy-wasm-tasks"
repository = "https://github.com/tekacs/bevy-wasm-tasks"
keywords = ["gamedev", "bevy", "wasm", "async", "plugin"]
categories = ["game-development", "asynchronous"]

[dependencies]
bevy_app = "0.13.0"
bevy_ecs = "0.13.0"
futures-util = { version = "0.3", features = ["channel"] }
tokio = { version = "1", features = ["sync"] }
wasm-bindgen-futures = "0.4.41"
