[package]
name = "bevy-wasm-tasks"
# Major and minor version here should match bevy's. Patch version can vary.
version = "0.13.0"
edition = "2024"
license = "CC0-1.0"
description = "Simple integration of WASM tasks into a Bevy app for background processing."
homepage = "https://crates.io/crates/bevy-wasm-tasks"
repository = "https://github.com/tekacs/bevy-wasm-tasks"
keywords = ["gamedev", "bevy", "wasm", "async", "plugin"]
categories = ["game-development", "asynchronous"]

[features]
default = []
tokio = ["tokio/full"]
wasm = ["tokio/rt"]

[dependencies]
bevy_app = { version = "0.18" }
bevy_ecs = { version = "0.18" }
dashmap = "5.5.3"
flume = "0.11.1"
futures-util = { version = "0.3", features = ["channel"] }
tokio = { version = "1", features = ["sync"] }
wasm-bindgen-futures = { version = "0.4.41" }
